@@ -86,6 +86,8 @@ sub get_jcitems {
             delete $form->{"${_}a"};
         }
 
+        $form->{noncharge} = $form->{non_billable};
+
         $query = qq|
 			SELECT s.printed, s.spoolfile, s.formname
 			  FROM status s
@@ -518,6 +520,13 @@ sub save {
     my $sth;
 
     my ( $null, $project_id ) = split /--/, $form->{projectnumber};
+    for (qw(qty sellprice allocated noncharge)) {
+        $form->{$_} = $form->parse_amount( $myconfig, $form->{$_} );
+    }
+    my ($total, $nonbillable);
+
+    $nonbillable = $form->{noncharge} || 0;
+    $total = $form->{qty} + $nonbillable;
 
     if ( $form->{id} ) {
 
@@ -557,10 +566,12 @@ sub save {
         my $uid = localtime;
         $uid .= "$$";
 
-        $query = qq|INSERT INTO jcitems (description, person_id) 
-                    SELECT '$uid', id
+        $query = qq|INSERT INTO jcitems 
+                           (description, person_id, total, non_billable) 
+                    SELECT ?, id, ?, ?
                       FROM person WHERE entity_id = person__get_my_entity_id()|;
-        $dbh->do($query) || $form->dberror($query);
+        my $isth = $dbh->prepare($query) || $form->dberror($query);
+        $isth->execute($uid, $total, $nonbillable)|| $form->dberror($query);
 
         $query = qq|SELECT id FROM jcitems WHERE description = '$uid'|;
         ( $form->{id} ) = $dbh->selectrow_array($query);
@@ -603,7 +614,9 @@ sub save {
 		       checkedout = ?::timestamp,
 		       person_id = (SELECT id FROM person 
                                      WHERE entity_id = ?),
-		       notes = ?
+		       notes = ?,
+                       total = ?,
+                       non_billable = ?
 		 WHERE id = ?|;
     $sth = $dbh->prepare($query);
     $sth->execute(
@@ -619,6 +632,8 @@ sub save {
         "$outdate $form->{outhour}:$form->{outmin}:$form->{outsec}",
         $form->{employee_id},
         $form->{notes},
+        $total,
+        $nonbillable,
         $form->{id}
     ) || $form->dberror($query);
 
